# symplastic-growth

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
surrogate/: __init__.py  calibration.py  data.py  surrogate.py  train.py
symplastic_growth/: __init__.py  config.py  division.py  model.py  params.py  segments.py  simulator.py  state.py  visualization.py
symplastic_growth/__pycache__/: model._cell_lr_rhs_parallel-18.py311.1.nbc  model._cell_lr_rhs_parallel-18.py311.nbi
tests/: test_symplastic_core.py
